# CZ3004_rpi_cc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  kill.sh
cv/: client.py  main.py  pubsub.py  requirements.txt  serial_grpc.py  serial_p.py  tf.py  tfmodel.py  vision_pb2.py  vision_pb2_grpc.py  yolov5.py  yolov5model.py
cv/model/: labelmap.txt
example/python/: main.py  model.py  tf.py  tfmodel.py  vision_pb2.py  vision_pb2_grpc.py  yolov5.py  yolov5model.py
protos/: Makefile  vision.proto
src/: CMakeLists.txt  macos.cc  main.cc
src/Adder/: CMakeLists.txt  adder.cc
src/common/: pubsub.hh
src/protocols/: CMakeLists.txt  action.cc  action.h  blueteeth.cc  blueteeth.h  blueteeth.hh  camera.cc  camera.h  camera.hh  cereal.cc  cereal.h  cereal.hh  commands.cc  commands.h  htttp.h  movement.h  protocol.cc  protocol.h  protocol.hh  pubsub.cc  safequeue.cc  serial_client.h  vision.grpc.pb.cc  vision.grpc.pb.h  vision.pb.cc  vision.pb.h  vision_client.h
